Adding more structure to mock tests